# com-investing-logic

./: pyproject.toml
src/com_investing_logic/: ComProcessor.py
